--- a/.travis.yml
+++ b/.travis.yml
@@ -23,6 +23,10 @@ matrix:
         # Do a coverage test in Python 3.
         - python: 3.6
           env: SETUP_CMD='test --coverage'
+          
+        # Generate docs
+        - python: 3.6
+          env: SETUP_CMD='build_docs'
 
 before_install:
 
